# v2-cover-regulations-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  v2-regulation-engine.code-workspace
.claude/: settings.json
.claude/agent-memory/researcher/: MEMORY.md  project_backend_api_audit.md  project_data_layer.md  project_frontend_audit.md  project_sst_v3_research.md  project_v1_infra.md
.claude/rules/: conventions.md  immutable.md  stack.md
.github/workflows/: ci.yml
.plans/: plan.md  research.md
architecture/: diagram.d2
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/data/: zone_rules.py
backend/app/models/: parcel.py
backend/app/routers/: home.py  parcels.py
backend/app/schemas/: home.py  parcel.py
backend/app/services/: home_service.py  llm_service.py  parcel_service.py  rules_engine.py
backend/tests/: conftest.py  test_home_api.py  test_home_service.py  test_llm_service.py  test_rules_engine.py
docs/: CONSOLIDATED_RESEARCH.md  DATA_SOURCES.md  decisions.md  discovery.md  github-actions-deployment-research.md  openapi.json  product-overview.md  requirements.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: AssessmentPanel.tsx  ConfidenceBadge.tsx  HomePanel.tsx  Map.tsx  SearchBar.tsx
frontend/src/hooks/: useParcelSearch.ts
frontend/src/lib/: api.ts  mapStyle.ts  recentSearches.test.ts  recentSearches.ts
frontend/src/types/: assessment.ts  home.ts
ingestion/: arcgis_client.py  config.py  create_tables.py  geometry.py  ingest.py  pyproject.toml  verify_data.py
martin/: Dockerfile
