[project]
name = "regulation-engine-ingestion"
version = "0.1.0"
description = "Data ingestion pipeline for LA regulation engine"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11",
    "shapely>=2.0",
    "psycopg[binary]>=3.2",
    "tenacity>=9.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
